@@ -29,6 +29,7 @@ Enhancements::
 * support horizontal alignment on AsciiDoc table cell that only contains paragraphs (#2358)
 * allow revision content to be customized by theme (#2362)
 * add symbols for shift, command, option, and return keys to the fallback font
+* add support for `nowrap` and `nobreak` roles on formatted text
 
 Improvements::
 
